--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "FUKTTT Home page"
 author: "fukttt"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Here some interesting posts about software engineering" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
